fix: scrollable overflow to accommodate for additional tiles

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -3,7 +3,6 @@ body,
 #__next {
   height: 100vh;
   width: 100%;
-  overflow: hidden;
 }
 
 #__next {
